--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                                 </a>
                             </span>
                             <span class="navbar-item">
-                                <a class="button is-white is-outlined" href="#">
+                                <a class="button is-white is-outlined" href="https://github.com/Palme412?tab=repositories">
                                     <span class="icon">
                                         <i class="fa fa-superpowers"></i>
                                     </span>
@@ -48,7 +48,7 @@
                                 </a>
                             </span>
                             <span class="navbar-item">
-                                <a class="button is-white is-outlined" href="#">
+                                <a class="button is-white is-outlined" href="https://www.linkedin.com/in/jacob-palmer-945783220/">
                                     <span class="icon">
                                         <i class="fa fa-book"></i>
                                     </span>
@@ -85,7 +85,7 @@
                                     <input class="input" type="text" placeholder="Enter your email">
                                 </p>
                                 <p class="control">
-                                    <a class="button is-info buttonBig">
+                                    <a class="button is-info buttonBig" id="button">
                                         Notify Me
                                     </a>
                                 </p>
